name: hs-barcode-test
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-dir: ""
 
executable hs-barcode-test
    build-depends: base -any, hs-barcode -any, mtl -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
 
test-suite test-hs-barcode-test
    build-depends: base -any, hs-barcode -any, mtl -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src