name: hs-barcode
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
data-dir: ""
 
library
    build-depends: JuicyPixels -any, base -any, containers -any
    exposed-modules: Barcode Barcode.Linear Barcode.Linear.Code11
                     Barcode.Linear.Code39 Barcode.Linear.Output
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules: Barcode.Linear.Util
 