name: hs-barcode
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-dir: ""
 
library
    build-depends: JuicyPixels -any, base -any, containers -any,
                   mtl -any
    exposed-modules: Barcode Barcode.Linear
    exposed: True
    buildable: True
    extensions: FlexibleContexts
    hs-source-dirs: src
    other-modules: Barcode.Error Barcode.Linear.Code39
                   Barcode.Linear.Code93 Barcode.Linear.Code11 Barcode.Linear.Output
                   Barcode.Linear.Util Barcode.Linear.Common
 